--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,3 +38,15 @@ add_custom_target(asan
   -DCLANG_MSAN=ON
   -DCMAKE_CXX_COMPILER=clang++
   -DCMAKE_C_COMPILER=clang)
+
+if(MSVC)
+  # Force to always compile with W4
+  if(CMAKE_CXX_FLAGS MATCHES "/W[0-4]")
+    string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_CXX_FLAGS
+      "${CMAKE_CXX_FLAGS}")
+  else()
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+  endif()
+else()
+  add_definitions ("-Wall")
+endif()
