--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ before_install:
     fi
   fi
 - if [[ $TRAVIS_OS_NAME = "osx" ]]; then
-    - brew update
-    - brew outdated libtool cmake || brew upgrade libtool cmake
+    - brew update;
+    - brew outdated libtool cmake || brew upgrade libtool cmake;
   fi
 script:
   - cmake -DCMAKE_CXX_COMPILER=$COMPILER .
