--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,7 @@ cmake_minimum_required (VERSION 2.6)
 cmake_policy(SET CMP0015 NEW)
 
 set (CMAKE_CXX_STANDARD 11)
+SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -std=c++11" )
 
 project (op1-utils)
 
